--- a/src/main/resources/com/softdev/secondary.fxml
+++ b/src/main/resources/com/softdev/secondary.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.softdev.SecondaryController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.softdev.Controller.SecondaryController">
     <children>
         <Label text="Secondary View" />
         <Button fx:id="secondaryButton" text="Switch to Primary View!" onAction="#switchToPrimary" />
