JPA and UI updated (need to make it perfect asap)

--- a/src/main/resources/view/food_by_category.fxml
+++ b/src/main/resources/view/food_by_category.fxml
@@ -115,6 +115,7 @@
                   </Button>
                </children>
             </GridPane>
+            <AnchorPane fx:id="paneOfImageViews" layoutX="120.0" layoutY="10.0" prefHeight="883.0" prefWidth="1032.0" />
          </children>
       </AnchorPane>
    </children>
