--- a/src/main/resources/view/food_by_category.fxml
+++ b/src/main/resources/view/food_by_category.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="BOTTOM_CENTER" prefHeight="943.0" prefWidth="1201.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.omlete.controller.PrimaryController">
+<VBox alignment="BOTTOM_CENTER" prefHeight="943.0" prefWidth="1201.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.omlete.controller.CategoryController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
@@ -33,7 +33,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button id="styleBakedDishButton" fx:id="bakedDishButton" mnemonicParsing="false" onAction="#pushBakedDishButton" prefHeight="80.0" prefWidth="80.0" stylesheets="@../style/baked_dish_format.css">
+                  <Button id="styleBakedDishButton" fx:id="bakedDishButton" graphicTextGap="0.0" mnemonicParsing="false" onAction="#pushBakedDishButton" prefHeight="80.0" prefWidth="80.0" stylesheets="@../style/baked_dish_format.css">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -41,7 +41,7 @@
                            </image>
                         </ImageView>
                      </graphic></Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="1">
+                  <Button fx:id="quickButton" mnemonicParsing="false" onAction="#pushQuickButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="7">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -50,7 +50,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="2">
+                  <Button fx:id="chickenButton" mnemonicParsing="false" onAction="#pushChickenButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="2">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -59,7 +59,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="3">
+                  <Button fx:id="dinnerButton" mnemonicParsing="false" onAction="#pushDinnerButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="3">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -68,25 +68,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="4">
-                     <graphic>
-                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/vegetables.jpg" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="5">
-                     <graphic>
-                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/beef.jpg" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="6">
+                  <Button fx:id="kidFriendlyButton" mnemonicParsing="false" onAction="#pushKidFriendlyButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="6">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -95,7 +77,16 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="7">
+                  <Button fx:id="beefButton" mnemonicParsing="false" onAction="#pushBeefButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="1">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/beef.jpg" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="easyButton" mnemonicParsing="false" onAction="#pushEasyButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="4">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -104,7 +95,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="8">
+                  <Button fx:id="healthyButton" mnemonicParsing="false" onAction="#pushHealthyButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="5">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -113,9 +104,28 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <Button fx:id="vegetablesButton" mnemonicParsing="false" onAction="#pushVegetablesButton" prefHeight="80.0" prefWidth="80.0" GridPane.rowIndex="8">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/vegetables.jpg" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </GridPane>
-            <AnchorPane fx:id="paneOfImageViews" layoutX="120.0" layoutY="10.0" prefHeight="883.0" prefWidth="1032.0" />
+            <GridPane fx:id="paneOfImages" layoutX="142.0" layoutY="21.0" prefHeight="860.0" prefWidth="994.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
          </children>
       </AnchorPane>
    </children>
