--- a/src/main/resources/view/welcome.fxml
+++ b/src/main/resources/view/welcome.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.omlete.controller.WelcomeController">
+<VBox alignment="CENTER" prefHeight="943.0" prefWidth="1201.0" spacing="20.0" stylesheets="@../style/welcome.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.omlete.controller.WelcomeController">
     <children>
-        <Label text="Secondary View" />
-        <Button fx:id="secondaryButton" text="Switch to Primary View" onAction="#switchToPrimary" />
+        <Label text="Itt épp építkezés zajlik." />
+        <Button fx:id="categoryButton" onAction="#switchToCategory" text="Megnézem a recepteket kategória szerint" />
+      <Button fx:id="createShoppingList" onAction="#switchToShoppingList" text="Bevásárlólistát csinálok" />
     </children>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
