--- a/src/main/resources/view/food_by_category.fxml
+++ b/src/main/resources/view/food_by_category.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.TextFlow?>
 
 <VBox alignment="BOTTOM_CENTER" prefHeight="943.0" prefWidth="1201.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.omlete.controller.CategoryController">
    <padding>
@@ -115,17 +116,17 @@
                   </Button>
                </children>
             </GridPane>
-            <GridPane fx:id="paneOfImages" layoutX="142.0" layoutY="21.0" prefHeight="860.0" prefWidth="994.0">
+            <GridPane fx:id="paneOfImages" layoutX="142.0" layoutY="21.0" prefHeight="860.0" prefWidth="268.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
+            <TextFlow fx:id="recipeField" layoutX="433.0" layoutY="21.0" prefHeight="877.0" prefWidth="722.0" />
          </children>
       </AnchorPane>
    </children>
