--- a/src/main/resources/view/welcome.fxml
+++ b/src/main/resources/view/welcome.fxml
@@ -3,14 +3,21 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.media.MediaView?>
 
-<VBox alignment="CENTER" prefHeight="943.0" prefWidth="1201.0" spacing="20.0" stylesheets="@../style/welcome.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.omlete.controller.WelcomeController">
-    <children>
-        <Label stylesheets="@styles.css" text="Üdvözöljük az omlete konyhai alkalmazásban!" />
-        <Button fx:id="categoryButton" onAction="#switchToCategory" text="Megtekint" />
-    </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-</VBox>
+<StackPane prefHeight="943.0" prefWidth="1241.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.unideb.omlete.controller.WelcomeController">
+   <children>
+      <VBox alignment="CENTER" prefHeight="943.0" prefWidth="1201.0" spacing="20.0" styleClass="mainWindow" stylesheets="@../style/welcome.css">
+          <children>
+              <Label styleClass="welcomeLabel" stylesheets="@../style/styles.css" text="Üdvözöljük az omlete konyhai alkalmazásban!" />
+              <Button fx:id="categoryButton" onAction="#switchToCategory" styleClass="welcomeButton" stylesheets="@../style/welcome.css" text="Megtekint" />
+          </children>
+          <padding>
+              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+          </padding>
+      </VBox>
+      <!--<MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="200.0" />-->
+   </children>
+</StackPane>
